# basic_cpp_repo_with_ci

./: .gitignore  CMakeLists.txt  README
src/: main.cpp  second.cpp  second.h
test/: test.cpp
